--- a/proyecto_06/src/main/resources/messages_en.properties
+++ b/proyecto_06/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ accion.nuevo=New
 accion.recordar=Remember
 accion.registrar=Register
 accion.regresar=Go back
-aplicacion.titulo=TechShop
+aplicacion.titulo=Proyecto06
 carrito.cantidad=Amount
 carrito.datos=Product Data
 carrito.facturar=Bill
@@ -16,12 +16,13 @@ carrito.titulo=Products in the Cart
 carrito.total=Total
 carrito.totalCompra=Total Purchase
 carrito.verCarrito=View Cart
-categoria.activo=Active
-categoria.agregar=Add Booking
-categoria.descripcion=Description
-categoria.listado=Booking List
-categoria.rutaImagen=Image
-categoria.total=Total Bookings
+reserva.idVuelo=Id Flight
+reserva.activo=Active
+reserva.agregar=Add Booking
+reserva.descripcion=Description
+reserva.listado=Booking List
+reserva.rutaImagen=Image
+reserva.total=Total Bookings
 e403.texto=You do not have permissions to view this page or perform this action
 e403.titulo=Access denied
 error.login=Bad Credentials
@@ -31,9 +32,9 @@ login.login=Authenticate
 login.password=Password
 login.username=User
 plantilla.bienvenido=User
-plantilla.categorias=Categories
-plantilla.derechos=TechShop All Rights Reserved 2023
-plantilla.productos=Products
+plantilla.reservas=Bookings
+plantilla.derechos=Proyecto06 All Rights Reserved 2023
+plantilla.productos=Flights
 plantilla.pruebas=Test
 plantilla.idioma=Languaje
 plantilla.asociaciones=Asociations
@@ -44,7 +45,7 @@ plantilla.tusuario=User
 plantilla.usuarios=users
 producto.activo=Active
 producto.agregar=Add Product
-producto.categoria=Category
+producto.reserva=Category
 producto.descripcion=Description
 producto.detalle=Detail
 producto.existencias=Stock
@@ -60,12 +61,12 @@ pruebas.jpql=JPQL Queries
 pruebas.nativo=Native Queries
 registro.activar.error=Failed to activate user
 registro.activar=Activate User
-registro.correo.activar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To activate your TechShop account follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>TechShop Team</h2>
-registro.correo.recordar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To reset your TechShop account password follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>TechShop Team</h2>
-registro.mensaje.activacion.ok=Please check your email account %s to activate your username in the TechShop system
-registro.mensaje.activacion=Activation of account in TechShop
-registro.mensaje.recordar.ok=Please check your email account %s to recover your username in the TechShop system
-registro.mensaje.recordar=Remember TechShop account
+registro.correo.activar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To activate your Proyecto06 account follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>TechShop Team</h2>
+registro.correo.recordar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To reset your Proyecto06 account password follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>TechShop Team</h2>
+registro.mensaje.activacion.ok=Please check your email account %s to activate your username in the Proyecto06 system
+registro.mensaje.activacion=Activation of account in Proyecto06
+registro.mensaje.recordar.ok=Please check your email account %s to recover your username in the Proyecto06 system
+registro.mensaje.recordar=Remember Proyecto06 account
 registro.mensaje.usuario.o.correo=There is already a user with username %s or email address %s if you don't remember your 'remember password' password
 registro.recordar.us=Remember user
 texto.no=No
