--- a/proyecto_06/src/main/resources/messages_es.properties
+++ b/proyecto_06/src/main/resources/messages_es.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=TechShop
+aplicacion.titulo=Proyecto06
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
@@ -16,12 +16,13 @@ carrito.titulo=Productos en el Carrito
 carrito.total=Total
 carrito.totalCompra=Total de Compra
 carrito.verCarrito=Ver Carrito
-categoria.activo=Activo
-categoria.agregar=Agregar Reserva
-categoria.descripcion=Descripci\u00f3n
-categoria.listado=Listado de Reservas
-categoria.rutaImagen=Imagen
-categoria.total=Total Reservas
+reserva.idVuelo=Id Vuelo
+reserva.activo=Activo
+reserva.agregar=Agregar Reserva
+reserva.descripcion=Descripci\u00f3n
+reserva.listado=Listado de Reservas
+reserva.rutaImagen=Imagen
+reserva.total=Total Reservas
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
 e403.titulo=Acceso denegado
 error.login=Credenciales err\u00f3neas
@@ -31,9 +32,9 @@ login.login=Autenticar
 login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
-plantilla.categorias=Categorias
-plantilla.derechos=TechShop Derechos Reservados 2023
-plantilla.productos=Productos
+plantilla.reservas=Reservas
+plantilla.derechos=Proyecto06 Derechos Reservados 2023
+plantilla.productos=Vuelos
 plantilla.pruebas=Pruebas
 plantilla.idioma=Idioma
 plantilla.asociaciones=Asociaciones
@@ -45,7 +46,7 @@ plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
 producto.activo=Activo
 producto.agregar=Agregar Producto
-producto.categoria=Categor\u00eda
+producto.reserva=Categor\u00eda
 producto.descripcion=Descripci\u00f3n
 producto.detalle=Detalle
 producto.existencias=Existencias
@@ -61,11 +62,11 @@ pruebas.jpql=Consultas JPQL
 pruebas.nativo=Consultas Nativas
 registro.activar.error=Error activando usuario
 registro.activar=Activar Usuario
-registro.correo.activar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para activar su cuenta en TechShop siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
-registro.correo.recordar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para resetear la contrase\u00f1a de su cuenta en TechShop siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
-registro.mensaje.activacion.ok=Por favor revise su cuenta de correo %s para activar su usuario en el sistema TechShop
-registro.mensaje.activacion=Activacion de cuenta en TechShop
-registro.mensaje.recordar.ok=Por favor revise su cuenta de correo %s para recuperar su usuario en el sistema TechShop
+registro.correo.activar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para activar su cuenta en Proyecto06 siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
+registro.correo.recordar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para resetear la contrase\u00f1a de su cuenta en Proyecto06 siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
+registro.mensaje.activacion.ok=Por favor revise su cuenta de correo %s para activar su usuario en el sistema Proyecto06
+registro.mensaje.activacion=Activacion de cuenta en Proyecto06
+registro.mensaje.recordar.ok=Por favor revise su cuenta de correo %s para recuperar su usuario en el sistema Proyecto06
 registro.mensaje.recordar=Recordar cuenta en TechShop
 registro.mensaje.usuario.o.correo=Ya existe un usuario con el username %s o el correo %s si no recuerda su contrase\u00f1a de 'recordar contrase\u00f1a'
 registro.recordar.us=Recordar Usuario
