--- a/proyecto_06/src/main/resources/messages_en.properties
+++ b/proyecto_06/src/main/resources/messages_en.properties
@@ -43,16 +43,20 @@ plantilla.suTienda=Your online store
 plantilla.troles=roles
 plantilla.tusuario=User
 plantilla.usuarios=users
-producto.activo=Active
-producto.agregar=Add Product
-producto.reserva=Category
-producto.descripcion=Description
-producto.detalle=Detail
-producto.existencias=Stock
-producto.imagen=image path
-producto.listado=Product List
-producto.precio=Price
-producto.total=Total Products
+vuelos.codigoVuelo=Fly Code
+vuelos.origen=Origin
+vuelos.destino=dDstination
+vuelos.fechaSalida=Departure Date
+vuelos.fechaLlegada=Arrival Date
+vuelos.activo=Active
+vuelos.agregar=Add flight
+vuelos.reserva=Book
+vuelos.descripcion=Descripcion
+vuelos.detalle=Detail
+vuelos.existencias=Stock
+vuelos.imagen=Image path
+vuelos.listado=Flight List
+vuelos.total=Total De Vuelos
 pruebas.todas=All
 pruebas.precio.superior=Top Price
 pruebas.precio.inferior=Lowes Price
