--- a/proyecto_06/src/main/resources/messages_es.properties
+++ b/proyecto_06/src/main/resources/messages_es.properties
@@ -44,16 +44,20 @@ plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
-producto.activo=Activo
-producto.agregar=Agregar Producto
-producto.reserva=Categor\u00eda
-producto.descripcion=Descripci\u00f3n
-producto.detalle=Detalle
-producto.existencias=Existencias
-producto.imagen=Ruta de la im\u00e1gen
-producto.listado=Listado de Productos
-producto.precio=Precio
-producto.total=Total Productos
+vuelos.codigoVuelo=Codigo de Vuelo
+vuelos.origen=Origen
+vuelos.destino=Destino
+vuelos.fechaSalida=Fecha de Salida
+vuelos.fechaLlegada=Fecha de llegada
+vuelos.activo=Activo
+vuelos.agregar=Agregar Vuelo
+vuelos.reserva=Reserva
+vuelos.descripcion=Descripci\u00f3n
+vuelos.detalle=Detalle
+vuelos.existencias=Existencias
+vuelos.imagen=Ruta de la im\u00e1gen
+vuelos.listado=Listado de Vuelos
+vuelos.total=Total De Vuelos
 pruebas.todas=Todas
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
