Tablas de mysql

--- a/proyecto_06/src/main/resources/messages_en.properties
+++ b/proyecto_06/src/main/resources/messages_en.properties
@@ -35,14 +35,14 @@ plantilla.bienvenido=User
 plantilla.reservas=Bookings
 plantilla.derechos=Proyecto06 All Rights Reserved 2023
 plantilla.productos=Flights
-plantilla.pruebas=Test
+plantilla.pruebas=Passengers
 plantilla.idioma=Languaje
-plantilla.asociaciones=Asociations
-plantilla.consultas=Queries
+plantilla.asociaciones=Contact
+plantilla.consultas=Checkin
 plantilla.suTienda=Your online store
 plantilla.troles=roles
 plantilla.tusuario=User
-plantilla.usuarios=users
+plantilla.usuarios=Payments
 vuelos.codigoVuelo=Fly Code
 vuelos.origen=Origin
 vuelos.destino=dDstination
