--- a/proyecto_06/src/main/resources/messages_es.properties
+++ b/proyecto_06/src/main/resources/messages_es.properties
@@ -35,15 +35,15 @@ plantilla.bienvenido=Usuario
 plantilla.reservas=Reservas
 plantilla.derechos=Proyecto06 Derechos Reservados 2023
 plantilla.productos=Vuelos
-plantilla.pruebas=Pruebas
+plantilla.pruebas=Pasajeros
 plantilla.idioma=Idioma
-plantilla.asociaciones=Asociaciones
-plantilla.consultas=Consultas
+plantilla.asociaciones=Contacto
+plantilla.consultas=Checkin
 plantilla.reportes=Reportes
 plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
-plantilla.usuarios=Usuarios
+plantilla.usuarios=Pagos
 vuelos.codigoVuelo=Codigo de Vuelo
 vuelos.origen=Origen
 vuelos.destino=Destino
