--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -16,10 +16,12 @@ carrito.titulo=Productos en el Carrito
 carrito.total=Total
 carrito.totalCompra=Total de Compra
 carrito.verCarrito=Ver Carrito
+reserva.idReserva=Id Reserva
 reserva.idVuelo=Id Vuelo
 reserva.activo=Activo
 reserva.agregar=Agregar Reserva
 reserva.descripcion=Descripci\u00f3n
+reserva.rutaImagen=Imagen
 reserva.listado=Listado de Reservas
 reserva.total=Total Reservas
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
@@ -33,8 +35,8 @@ login.username=Usuario
 plantilla.bienvenido=Usuario
 plantilla.reservas=Reservas
 plantilla.derechos=Proyecto06 Derechos Reservados 2023
-plantilla.vueloss=Vuelos
-plantilla.pruebas=Pasajeros
+plantilla.vuelos=Vuelos
+plantilla.pasajeros=Pasajeros
 plantilla.idioma=Idioma
 plantilla.asociaciones=Contacto
 plantilla.consultas=Checkin
@@ -43,18 +45,18 @@ plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Pagos
+vuelos.idVuelo= Id Vuelo
 vuelos.codigoVuelo=Codigo de Vuelo
 vuelos.origen=Origen
 vuelos.destino=Destino
 vuelos.fechaSalida=Fecha de Salida
 vuelos.fechaLlegada=Fecha de llegada
-vuelos.activo=Activo
+vuelos.precio=Precio
 vuelos.agregar=Agregar Vuelo
 vuelos.reserva=Reserva
 vuelos.descripcion=Descripci\u00f3n
 vuelos.detalle=Detalle
 vuelos.existencias=Existencias
-vuelos.imagen=Ruta de la im\u00e1gen
 vuelos.listado=Listado de Vuelos
 vuelos.total=Total De Vuelos
 pruebas.todas=Todas
