pagina de contacto

--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -38,13 +38,13 @@ plantilla.derechos=Proyecto06 Derechos Reservados 2023
 plantilla.vuelos=Vuelos
 plantilla.pasajeros=Pasajeros
 plantilla.idioma=Idioma
-plantilla.asociaciones=Contacto
-plantilla.consultas=Checkin
+plantilla.contacto=Contacto
+plantilla.checkin=Checkin
 plantilla.reportes=Reportes
 plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
-plantilla.usuarios=Pagos
+plantilla.pagos=Pagos
 vuelos.idVuelo= Id Vuelo
 vuelos.codigoVuelo=Codigo de Vuelo
 vuelos.origen=Origen
@@ -59,7 +59,14 @@ vuelos.detalle=Detalle
 vuelos.existencias=Existencias
 vuelos.listado=Listado de Vuelos
 vuelos.total=Total De Vuelos
-pruebas.todas=Todas
+contacto.idContacto= Id contacto
+contacto.nombre=Nombre
+contacto.segundoNombre=Segundo Nombre
+contacto.email=Email
+contacto.mensaje=Mensaje
+contacto.agregar=Agregar Contacto
+contacto.listado=Listado de Contactos
+contactos.total=Total De Contactos
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
 pruebas.ampliadas=Consultas Ampliadas
