--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -61,12 +61,19 @@ vuelos.listado=Listado de Vuelos
 vuelos.total=Total De Vuelos
 contacto.idContacto= Id contacto
 contacto.nombre=Nombre
-contacto.segundoNombre=Segundo Nombre
+contacto.apellido=Apellido
 contacto.email=Email
 contacto.mensaje=Mensaje
 contacto.agregar=Agregar Contacto
 contacto.listado=Listado de Contactos
-contactos.total=Total De Contactos
+contacto.total=Total De Contactos
+checkin.idCheckin= Id Checkin
+checkin.idReserva= Id Reserva
+checkin.fechaCheckin= Fecha del Checkin
+checkin.estado= Estado
+checkin.agregar=Agregar Checkin
+checkin.listado=Listado de Checkins
+checkin.total=Total De Checkins
 pruebas.precio.superior=Precio Superior
 pruebas.precio.inferior=Precio Inferior
 pruebas.ampliadas=Consultas Ampliadas
