--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -8,14 +8,20 @@ accion.registrar=Registrar
 accion.regresar=Regresar
 aplicacion.titulo=Proyecto06
 carrito.cantidad=Cantidad
-carrito.datos=Datos del Producto
+carrito.datos=Datos del Paquetes
 carrito.facturar=Facturar
 carrito.no_mostrar=Carrito V\u00e1cio!
 carrito.seguirComprando=Seguir Comprando
-carrito.titulo=Productos en el Carrito
+carrito.titulo=Paquetess en el Carrito
 carrito.total=Total
 carrito.totalCompra=Total de Compra
 carrito.verCarrito=Ver Carrito
+categoria.activo=Activo
+categoria.agregar=Agregar Categoria
+categoria.descripcion=Descripci\u00f3n
+categoria.listado=Listado de Categorias
+categoria.rutaImagen=Imagen
+categoria.total=Total Categorias
 reserva.idReserva=Id Reserva
 reserva.idVuelo=Id Vuelo
 reserva.activo=Activo
@@ -27,7 +33,7 @@ reserva.total=Total Reservas
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
 e403.titulo=Acceso denegado
 error.login=Credenciales err\u00f3neas
-index.nuestrosProductos=Nuestros Productos
+index.nuestrosPaquetess=Nuestros Paquetess
 lista.vacia=Lista Vac\u00eda
 login.login=Autenticar
 login.password=Contrase\u00f1a
@@ -41,10 +47,22 @@ plantilla.idioma=Idioma
 plantilla.contacto=Contacto
 plantilla.checkin=Checkin
 plantilla.reportes=Reportes
+plantilla.paquetes=Paquetes
+plantilla.categoria=Categoria
 plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.pagos=Pagos
+paquetes.activo=Activo
+paquetes.agregar=Agregar Paquetes
+paquetes.categoria=Categor\u00eda
+paquetes.descripcion=Descripci\u00f3n
+paquetes.detalle=Detalle
+paquetes.existencias=Existencias
+paquetes.imagen=Ruta de la im\u00e1gen
+paquetes.listado=Listado de Paquetes
+paquetes.precio=Precio
+paquetes.total=Total Paquetes
 vuelos.idVuelo= Id Vuelo
 vuelos.codigoVuelo=Codigo de Vuelo
 vuelos.origen=Origen
