--- a/proyecto_06/src/main/resources/messages_en.properties
+++ b/proyecto_06/src/main/resources/messages_en.properties
@@ -16,6 +16,11 @@ carrito.titulo=Products in the Cart
 carrito.total=Total
 carrito.totalCompra=Total Purchase
 carrito.verCarrito=View Cart
+categoria.activo=Active
+categoria.agregar=Add Category
+categoria.descripcion=Description
+categoria.listado=Category List
+categoria.rutaImagen=Image
 reserva.idVuelo=Id Flight
 reserva.activo=Active
 reserva.agregar=Add Booking
@@ -34,15 +39,26 @@ login.username=User
 plantilla.bienvenido=User
 plantilla.reservas=Bookings
 plantilla.derechos=Proyecto06 All Rights Reserved 2023
-plantilla.productos=Flights
+plantilla.paquetess=Flights
 plantilla.pruebas=Passengers
 plantilla.idioma=Languaje
 plantilla.asociaciones=Contact
 plantilla.consultas=Checkin
+plantilla.paquetes=Packages
+plantilla.paquetes=Category
 plantilla.suTienda=Your online store
 plantilla.troles=roles
 plantilla.tusuario=User
 plantilla.usuarios=Payments
+paquetes.activo=Active
+paquetes.agregar=Add Package
+paquetes.categoria=Category
+paquetes.descripcion=Description
+paquetes.detalle=Detail
+paquetes.existencias=Stock
+paquetes.imagen=image path
+paquetes.listado=Package List
+paquetes.precio=Price
 vuelos.codigoVuelo=Fly Code
 vuelos.origen=Origin
 vuelos.destino=dDstination
