--- a/proyecto_06/src/main/resources/messages_es.properties
+++ b/proyecto_06/src/main/resources/messages_es.properties
@@ -16,6 +16,12 @@ carrito.titulo=Productos en el Carrito
 carrito.total=Total
 carrito.totalCompra=Total de Compra
 carrito.verCarrito=Ver Carrito
+categoria.activo=Activo
+categoria.agregar=Agregar Categoria
+categoria.descripcion=Descripci\u00f3n
+categoria.listado=Listado de Categorias
+categoria.rutaImagen=Imagen
+categoria.total=Total Categorias
 reserva.idVuelo=Id Vuelo
 reserva.activo=Activo
 reserva.agregar=Agregar Reserva
@@ -40,10 +46,22 @@ plantilla.idioma=Idioma
 plantilla.asociaciones=Contacto
 plantilla.consultas=Checkin
 plantilla.reportes=Reportes
+plantilla.paquetes=Paquetes
+plantilla.categoria=Categoria
 plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Pagos
+paquetes.activo=Activo
+paquetes.agregar=Agregar Paquetes
+paquetes.categoria=Categor\u00eda
+paquetes.descripcion=Descripci\u00f3n
+paquetes.detalle=Detalle
+paquetes.existencias=Existencias
+paquetes.imagen=Ruta de la im\u00e1gen
+paquetes.listado=Listado de Paquetess
+paquetes.precio=Precio
+paquetes.total=Total Paquetess
 vuelos.codigoVuelo=Codigo de Vuelo
 vuelos.origen=Origen
 vuelos.destino=Destino
