--- a/proyecto_06/src/main/resources/messages_en.properties
+++ b/proyecto_06/src/main/resources/messages_en.properties
@@ -45,7 +45,7 @@ plantilla.idioma=Languaje
 plantilla.asociaciones=Contact
 plantilla.consultas=Checkin
 plantilla.paquetes=Packages
-plantilla.paquetes=Category
+plantilla.categoria=Category
 plantilla.suTienda=Your online store
 plantilla.troles=roles
 plantilla.tusuario=User
