filtro de busqueda en paquetes

--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -92,11 +92,12 @@ checkin.estado= Estado
 checkin.agregar=Agregar Checkin
 checkin.listado=Listado de Checkins
 checkin.total=Total De Checkins
-pruebas.precio.superior=Precio Superior
-pruebas.precio.inferior=Precio Inferior
-pruebas.ampliadas=Consultas Ampliadas
-pruebas.jpql=Consultas JPQL
-pruebas.nativo=Consultas Nativas
+filtro.busqueda=Destinos
+filtro.ubicacion=Destino
+filtro.fechaSalida=Agregue fecha de salida
+filtro.fechaLlegada=Agregue fecha de llegada
+filtro.cantidadPersonas=Cantidad de personas
+boton.buscar=Buscar
 registro.activar.error=Error activando usuario
 registro.activar=Activar Usuario
 registro.correo.activar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para activar su cuenta en Proyecto06 siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
