registro de usuario

--- a/proyecto_06/src/main/resources/messages.properties
+++ b/proyecto_06/src/main/resources/messages.properties
@@ -51,7 +51,8 @@ plantilla.paquetes=Paquetes
 plantilla.categoria=Categoria
 plantilla.suTienda=Su tienda en l\u00ednea
 plantilla.troles=Roles
-plantilla.tusuario=Usuario
+plantilla.usuarios=Usuario
+plantilla.usuario=Usuario
 plantilla.pagos=Pagos
 paquetes.activo=Activo
 paquetes.agregar=Agregar Paquetes
