--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -39,7 +39,7 @@ login.username=User
 plantilla.bienvenido=User
 plantilla.reservas=Bookings
 plantilla.derechos=Proyecto06 All Rights Reserved 2023
-plantilla.paquetess=Flights
+plantilla.vuelos=Flights
 plantilla.pruebas=Passengers
 plantilla.idioma=Languaje
 plantilla.asociaciones=Contact
